# Snake

./: .gitignore  CMakeLists.txt  README.md  Snake.sln
Snake/: Config.h  DefaultGamemode.cpp  DefaultGamemode.h  Renderer.cpp  Renderer.h  Snake.vcxproj  Snake.vcxproj.filters  Texture.cpp  main.cpp
include/: Texture.h
src/: DefaultGamemode.cpp  main.cpp
